--- a/src/styles/ContactTemplate.css
+++ b/src/styles/ContactTemplate.css
@@ -10,10 +10,11 @@
 }
 
 .contact-card {
+    background-color: white;
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 20px;
-    min-width: 200px;
+    min-width: 150px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -31,12 +32,30 @@
 }
 
 .contact-card p {
-    color: rgba(120, 119, 116, 1);;
+    color: rgba(120, 119, 116, 1);
     font-size: 14px;
 }
+
+.contact-card-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact-icon {
+    margin-right: 2px;
+    /* Adjust the margin as needed */
+}
+
+
 
 @media (max-width: 650px) {
     .contact-cards {
         flex-direction: column;
     }
+}
+
+/* Added styles for button hover effect */
+.contact-card:hover {
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
